@@ -883,6 +883,7 @@
 (si::defun-builtin split-window (&optional arg vertical))
 (si::defun-builtin delete-other-windows ())
 (si::defun-builtin delete-window ())
+(si::defun-builtin deleted-window-p (window))
 (si::defun-builtin selected-window ())
 (si::defun-builtin minibuffer-window ())
 (si::defun-builtin minibuffer-window-p (window))
